# Timestamper

./: .gitignore  OffsetSpinBox.py  README.md  app.py  build.sh  constants.py  exif_manager.py  main.py  preset_manager.py  pyproject.toml  requirements.txt  scratch.py  ui_manager.py
Lightroom/Lightroom SDK Documentation/: Readme.txt
Lightroom/Lightroom SDK Documentation/API Reference/: adobe.css  index.html  luadoc.css
Lightroom/Lightroom SDK Documentation/API Reference/modules/: LrApplication.html  LrApplicationView.html  LrBinding.html  LrCatalog.html  LrCollection.html  LrCollectionSet.html  LrColor.html  LrDate.html  LrDevelopController.html  LrFtp.html  (+55 more)
Lightroom/Lightroom SDK Documentation/Guide/: 00_Preface.txt  01_Using_the_Lightroom_Classic_SDK.txt  02_Writing_a_Lightroom_Classic_Plug-in.txt  03_Creating_Export_and_Publish_Services.txt  04_Working_with_Metadata.txt  05_Creating_a_User_Interface_for_Your_Plug-in.txt  06_Writing_a_Web-engine_Plug-in.txt  07_Using_ZStrings_for_Localization.txt  08_SDK_Sample_Plug-ins.txt  09_Getting_Started_A_Tutorial_Example.txt  10_Defining_Metadata_A_Walkthrough.txt  11_Web_Gallery_Plug-ins_A_Tutorial_Example.txt
src/timestamper/: OffsetSpinBox.py  __init__.py  app.py  constants.py  drag_drop_list_widget.py  exif_manager.py  main.py  preset_manager.py  settings_dialog.py  thumbnail_delegate.py  ui_manager.py  utils.py
tests/: conftest.py  test_dialogs.py  test_drag_drop.py  test_exif_operations.py  test_main.py  test_main_window.py  test_offset_spin_box.py  test_preset_manager.py  test_ui_interactions.py  test_utils.py
(+30 files in other folders)
